# RomainCompta

./: .gitignore  build.sh  pyproject.toml  render.yaml
config/: settings.py  urls.py
patients/: admin.py  models.py  urls.py  views.py
patients/migrations/: 0001_initial.py  0002_initial.py  0003_sessionpatient_facture_liee.py  0004_patient_compte_rendu.py  0005_patient_suivi.py
ventes/: admin.py  models.py  urls.py  views.py
ventes/migrations/: 0001_initial.py  0002_facturevente_document_lie.py  0003_alter_facturevente_document_lie.py  0004_alter_facturevente_document_lie.py  0005_alter_facturevente_type_de_facture.py
